@@ -1,5 +1,6 @@
 package com.example.backend.config;
 
+import java.util.Arrays;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -7,13 +8,24 @@ import org.springframework.web.cors.*;
 
 @Configuration
 public class CorsConfig {
+
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration cfg = new CorsConfiguration();
-    cfg.setAllowedOrigins(List.of("http://localhost:5173"));
-    cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-    cfg.setAllowedHeaders(List.of("Content-Type","Authorization"));
+
+    // Orígenes exactos (con puerto). No usar "*" si allowCredentials=true
+    cfg.setAllowedOriginPatterns(Arrays.asList(
+        "http://localhost:5173",
+        "http://127.0.0.1:5173"
+    ));
     cfg.setAllowCredentials(true);
+
+    // Métodos y cabeceras que aceptamos en el preflight
+    cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+    cfg.setAllowedHeaders(Arrays.asList("*")); // acepta Content-Type, Authorization, etc.
+    cfg.setExposedHeaders(Arrays.asList("Location", "Set-Cookie"));
+    cfg.setMaxAge(3600L);
+
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", cfg);
     return source;
